--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,184 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/black"
     tools:context=".MainActivity">
 
-
-    <ImageView
-        android:id="@+id/square_0"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/label_content_desc_tic_tac_toe_cell"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_star"
-        app:layout_constraintBottom_toTopOf="@+id/square_4"
-        app:layout_constraintDimensionRatio="1"
-        app:layout_constraintEnd_toStartOf="@+id/square_4"
-        app:layout_constraintWidth_percent="0.25" />
-
-
-    <ImageView
-        android:id="@+id/square_1"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/label_content_desc_tic_tac_toe_cell"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_star"
-        app:layout_constraintBottom_toTopOf="@+id/square_4"
-        app:layout_constraintDimensionRatio="1"
-        app:layout_constraintStart_toStartOf="@+id/square_4"
-        app:layout_constraintWidth_percent="0.25" />
-
-
-    <ImageView
-        android:id="@+id/square_2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/label_content_desc_tic_tac_toe_cell"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_star"
-        app:layout_constraintBottom_toTopOf="@+id/square_4"
-        app:layout_constraintDimensionRatio="1"
-        app:layout_constraintStart_toEndOf="@+id/square_4"
-        app:layout_constraintWidth_percent="0.25" />
-
-
-    <ImageView
-        android:id="@+id/square_3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/label_content_desc_tic_tac_toe_cell"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_star"
-        app:layout_constraintBottom_toBottomOf="@+id/square_4"
-        app:layout_constraintDimensionRatio="1"
-        app:layout_constraintEnd_toStartOf="@+id/square_4"
-        app:layout_constraintWidth_percent="0.25" />
-
-    <ImageView
-        android:id="@+id/square_4"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/label_content_desc_tic_tac_toe_cell"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_circle"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.25" />
-
-
-    <ImageView
-        android:id="@+id/square_5"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/label_content_desc_tic_tac_toe_cell"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_star"
-        app:layout_constraintBottom_toBottomOf="@+id/square_4"
-        app:layout_constraintDimensionRatio="1"
-        app:layout_constraintStart_toEndOf="@+id/square_4"
-        app:layout_constraintWidth_percent="0.25" />
-
-    <ImageView
-        android:id="@+id/square_6"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/label_content_desc_tic_tac_toe_cell"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_star"
-        app:layout_constraintDimensionRatio="1"
-        app:layout_constraintEnd_toStartOf="@+id/square_4"
-        app:layout_constraintTop_toBottomOf="@+id/square_4"
-        app:layout_constraintWidth_percent="0.25" />
-
-
-    <ImageView
-        android:id="@+id/square_7"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/label_content_desc_tic_tac_toe_cell"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_star"
-        app:layout_constraintDimensionRatio="1"
-        app:layout_constraintStart_toStartOf="@+id/square_4"
-        app:layout_constraintTop_toBottomOf="@+id/square_4"
-        app:layout_constraintWidth_percent="0.25" />
-
-
-    <ImageView
-        android:id="@+id/square_8"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/label_content_desc_tic_tac_toe_cell"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_star"
-        app:layout_constraintDimensionRatio="1"
-        app:layout_constraintStart_toEndOf="@+id/square_4"
-        app:layout_constraintTop_toBottomOf="@+id/square_4"
-        app:layout_constraintWidth_percent="0.25" />
-
-    <!-- Create Dividing Lines -->
-    <FrameLayout
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:theme="@style/BoardLines"
-        app:layout_constraintEnd_toEndOf="@id/square_2"
-        app:layout_constraintStart_toStartOf="@id/square_0"
-        app:layout_constraintTop_toTopOf="@id/square_4" />
-
-    <FrameLayout
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:theme="@style/BoardLines"
-        app:layout_constraintEnd_toEndOf="@id/square_2"
-        app:layout_constraintStart_toStartOf="@id/square_0"
-        app:layout_constraintTop_toBottomOf="@id/square_4" />
-
-    <FrameLayout
-        android:layout_width="1dp"
-        android:layout_height="0dp"
-        android:theme="@style/BoardLines"
-        app:layout_constraintBottom_toBottomOf="@id/square_8"
-        app:layout_constraintStart_toStartOf="@id/square_4"
-        app:layout_constraintTop_toTopOf="@id/square_2" />
-
-    <FrameLayout
-        android:layout_width="1dp"
-        android:layout_height="0dp"
-        android:theme="@style/BoardLines"
-        app:layout_constraintBottom_toBottomOf="@id/square_8"
-        app:layout_constraintStart_toEndOf="@id/square_4"
-        app:layout_constraintTop_toTopOf="@id/square_2" />
-
-    <Button
-        android:id="@+id/button_reset"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/label_reset"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/square_7" />
-
-    <TextView
-        android:id="@+id/text_winning_message"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:alpha="0.9"
-        android:background="?android:attr/colorBackground"
-        android:gravity="center_horizontal"
-        android:padding="16dp"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Stars Won!" />
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginTop="300dp"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="100sp"
+            android:src="@mipmap/logo"
+            android:gravity="center"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            />
+        <Button
+            android:id="@+id/btn_start"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="start"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:backgroundTint="@color/black"
+            android:textAllCaps="false"
+            />
+
+    </LinearLayout>
+
+
+
+</LinearLayout>
