--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/black"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,23 +17,24 @@
             android:layout_width="wrap_content"
             android:layout_height="100sp"
             android:src="@mipmap/logo"
-            android:gravity="center"
+            >
 
-            />
+        </ImageView>
+
         <Button
             android:id="@+id/btn_start"
             android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="start"
+            android:text="Start"
             android:textColor="@color/white"
             android:textSize="25sp"
             android:backgroundTint="@color/black"
             android:textAllCaps="false"
-            />
+            >
 
+        </Button>
     </LinearLayout>
-
 
 
 </LinearLayout>
